cmake_minimum_required(VERSION 3.8)
project(ft_calib_comp)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclpy REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

add_executable(ft_test_cpp src/ft_test_cpp.cpp)
target_include_directories(ft_test_cpp PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)
target_compile_features(ft_test_cpp PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17

install(TARGETS ft_test_cpp
  DESTINATION lib/${PROJECT_NAME})

# install python package
ament_python_install_package(${PROJECT_NAME})

# install python scripts
install(PROGRAMS scripts/ft_test.py
  DESTINATION lib/${PROJECT_NAME})

# install launch and configs
install(DIRECTORY launch #config
  DESTINATION share/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
