<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ft_calibration</name>
  <version>0.0.0</version>
  <description>Force torque sensor calibration for ROS 2</description>
  <maintainer email="maker_cc@foxmail.com">Chen Chen</maintainer>
  <license>Apache-2.0</license>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
